Reduce padding above and below the "Get Started" contact form on Institution Contact single on mobile Fixes #380

--- a/assets/scss/partials/_singular.scss
+++ b/assets/scss/partials/_singular.scss
@@ -544,12 +544,12 @@ img.wprm-comment-rating {
 .slp-contact-info {
 	max-width: 1168px;
 	margin: 0px auto 0;
-	padding: 0 24px 160px;
+	padding: 0 24px 50px;
 	display: grid;
 	grid-template-columns: 1fr;
 	gap: 0 116px;
-
 	@include media(">tablet") {
+		padding: 0 24px 160px;
 		gap: 0 40px;
 		grid-template-columns: 1fr 1fr;
 	}
